--- a/templates/environments/includes/elasticsearch.base.yml
+++ b/templates/environments/includes/elasticsearch.base.yml
@@ -19,6 +19,10 @@ services:
       - "ES_JAVA_OPTS=-Xms{{ default "64m" .elasticsearch_xms }} -Xmx{{ default "512m" .elasticsearch_xmx }}"
     volumes:
       - esdata:/usr/share/elasticsearch/data
+{{- if isEnabled ( default false .elasticsearch_expose ) }}
+    ports:
+      - {{ default 9200 .elasticsearch_expose_target }}:9200
+{{- end }}
 
 volumes:
   esdata:
