--- a/templates/environments/magento2/magento2.base.yml
+++ b/templates/environments/magento2/magento2.base.yml
@@ -2,7 +2,7 @@
 
 version: "3.5"
 services:
-{{ if not (isEnabledStrict .reward_single_web_container) }}
+{{ if not ( isEnabled ( default false .reward_single_web_container )) }}
   nginx:
     environment:
       - NGINX_PUBLIC=/pub
@@ -24,7 +24,7 @@ services:
       - dev.reward.environment.name={{ .reward_env_name }}
     environment:
       - MAGE_DEBUG_SHOW_ARGS=1
-{{ if (isEnabledStrict .reward_single_web_container) }}
+{{ if ( isEnabled ( default false .reward_single_web_container )) }}
       - NGINX_PUBLIC=/pub
       - NGINX_TEMPLATE=magento2[.]conf
 {{ end }}
