--- a/templates/environments/includes/blackfire.base.yml
+++ b/templates/environments/includes/blackfire.base.yml
@@ -4,7 +4,7 @@ version: "3.5"
 
 x-volumes: &volumes
   - {{ .reward_ssl_dir }}/rootca/certs:/etc/ssl/reward-rootca-cert:ro
-{{ if (isEnabledPermissive .reward_shared_composer) }}
+{{ if isEnabled ( default true .reward_shared_composer ) }}
   - {{ .reward_composer_dir }}:/home/www-data/.composer:cached
 {{ end }}
   - .{{ default "" .reward_web_root }}/:/var/www/html:cached
