--- a/templates/environments/includes/nginx.windows.yml
+++ b/templates/environments/includes/nginx.windows.yml
@@ -1,7 +1,7 @@
 {{- /* @formatter:off */ -}}
 
 version: "3.5"
-{{ if not (isEnabledStrict .reward_single_web_container) }}
+{{ if not ( isEnabled ( default false .reward_single_web_container )) }}
 services:
   nginx:
     environment:
