--- a/templates/environments/includes/redis.base.yml
+++ b/templates/environments/includes/redis.base.yml
@@ -10,6 +10,10 @@ services:
       - dev.reward.environment.name={{ .reward_env_name }}
     volumes:
       - redis:/data
+{{- if isEnabled ( default false .redis_expose ) }}
+    ports:
+      - {{ default 6379 .redis_expose_target }}:6379
+{{- end }}
 
 volumes:
   redis:
