--- a/templates/environments/magento2/magento2.magepack.windows.yml
+++ b/templates/environments/magento2/magento2.magepack.windows.yml
@@ -3,7 +3,7 @@
 version: "3.5"
 
 x-volumes: &volumes
-{{ if isEnabledStrict .reward_wsl2_direct_mount }}
+{{ if isEnabled ( default false .reward_wsl2_direct_mount ) }}
   - .{{ default "" .reward_web_root }}/:/var/www/html
 {{ else }}
   - .{{ default "" .reward_web_root }}/pub/media:/var/www/html/pub/media:cached
