--- a/templates/environments/pwa-studio/pwa-studio.windows.yml
+++ b/templates/environments/pwa-studio/pwa-studio.windows.yml
@@ -2,7 +2,7 @@
 
 version: "3.5"
 
-{{ if not (isEnabledStrict .reward_wsl2_direct_mount) }}
+{{ if not ( isEnabled ( default false .reward_wsl2_direct_mount )) }}
 x-volumes: &volumes
   - appdata:/var/www/html
 {{ end }}
