--- a/templates/environments/shopware/shopware.windows.yml
+++ b/templates/environments/shopware/shopware.windows.yml
@@ -2,7 +2,7 @@
 
 version: "3.5"
 
-{{ if not (isEnabledStrict .reward_wsl2_direct_mount) }}
+{{ if not ( isEnabled ( default false .reward_wsl2_direct_mount )) }}
 x-volumes: &volumes
   - .{{ default "" .reward_web_root }}/public/media:/var/www/html/public/media:cached
   - appdata:/var/www/html
