--- a/images/php-fpm/debian/shopware-web/Dockerfile
+++ b/images/php-fpm/debian/shopware-web/Dockerfile
@@ -17,11 +17,12 @@ RUN set -eux \
 FROM ${IMAGE_NAME}:${PHP_VERSION}-shopware-${IMAGE_BASE}
 USER root
 
-ENV CRON_ENABLED   false
-ENV SOCAT_ENABLED  false
-ENV CHOWN_DIR_LIST wp-content/uploads
-ENV UID            1000
-ENV GID            1000
+ENV CRON_ENABLED            false
+ENV SOCAT_ENABLED           false
+ENV SHELLINABOX_ENABLED     true
+ENV CHOWN_DIR_LIST          wp-content/uploads
+ENV UID                     1000
+ENV GID                     1000
 
 ENV NGINX_UPSTREAM_HOST           127.0.0.1
 ENV NGINX_UPSTREAM_PORT           9000
@@ -34,6 +35,7 @@ ENV NGINX_PUBLIC                  '/public'
 ENV NGINX_TEMPLATE                shopware.conf
 ENV XDEBUG_CONNECT_BACK_HOST      '""'
 ENV SUDO_ENABLED                  "false"
+ENV USER_PASSWORD                 ""
 
 COPY shopware-web/rootfs/. /
 COPY --from=builder-supervisor /usr/local/bin/supervisord /usr/bin/
@@ -45,16 +47,19 @@ RUN set -eux \
     && wget -q -O - https://nginx.org/keys/nginx_signing.key | apt-key add - \
     && apt-get update && apt-get install -y --no-install-recommends \
        nginx \
+       shellinabox \
     && rm -rf /var/lib/apt/lists/* /var/log/apt \
     && usermod -aG $GID nginx \
     && rm -f /etc/supervisor/supervisord.conf.dpkg-dist \
     && mkdir -p /etc/supervisor/conf.d \
     && chmod +x /usr/local/bin/install-shopware.sh /usr/local/bin/stop-supervisor.sh \
-    && chown -R www-data: /etc/supervisor /etc/nginx /etc/php /var/log/nginx /var/cache/nginx /var/lib/php
+    && chown -R www-data: /etc/supervisor /etc/nginx /etc/php /var/log/nginx /var/cache/nginx /var/lib/php \
+    && chmod +x /docker-entrypoint.sh
 #  && ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
 
 USER www-data
 
+EXPOSE 4200
 EXPOSE 8080
 
 CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
