--- a/.github/workflows/main-docker-image-php-fpm-shopware.yml
+++ b/.github/workflows/main-docker-image-php-fpm-shopware.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "debian" ]
-        php_version: [ "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
         build_group: [ "shopware" ]
     steps:
       - uses: actions/checkout@v1
