--- a/.github/workflows/main-docker-image-php-fpm.yml
+++ b/.github/workflows/main-docker-image-php-fpm.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "debian" ]
-        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2" ]
     steps:
       - uses: actions/checkout@v1
       - name: Login to DockerHub
