add missing env var for varnish 7

--- a/images/varnish/debian/7.0/Dockerfile
+++ b/images/varnish/debian/7.0/Dockerfile
@@ -94,13 +94,14 @@ RUN set -eux \
     && if [ "$(dpkg --print-architecture)" = "arm64" ]; \
         then BUILD_ARCH="arm64"; \
         else BUILD_ARCH="amd64"; \
-    fi \
+       fi \
     && curl -fsSLo /usr/local/bin/gomplate \
-      "https://github.com/hairyhenderson/gomplate/releases/latest/download/gomplate_linux-${BUILD_ARCH}" \
+       "https://github.com/hairyhenderson/gomplate/releases/latest/download/gomplate_linux-${BUILD_ARCH}" \
     && chmod +x /usr/local/bin/gomplate \
     && apt-get install -y --no-install-recommends --allow-downgrades \
     libgetdns10 \
     varnish=${VARNISH_VERSION} \
+    && mkdir -p /var/lib/varnish/cache \
     && rm -rf /var/lib/apt/lists/* /var/log/apt \
     && PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/sbin" ldconfig -n /usr/lib/varnish/vmods \
     && chmod +x /usr/local/bin/stop-supervisor.sh
