--- a/.goreleaser.local.yml
+++ b/.goreleaser.local.yml
@@ -7,8 +7,9 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
+    main: ./cmd/reward
     ldflags:
-      - -s -w -X main.VERSION=v0.4.0-beta1-{{ time "200601021504" }}
+      - -s -w -X main.VERSION=v0.4.0-beta2-{{ time "200601021504" }}
     goos:
       - linux
       - windows
