--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,8 +7,9 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
+    main: ./cmd/reward
     ldflags:
-      - -s -w -X main.VERSION={{.Tag}}-{{ time "200601021504" }}
+      - -s -w -X main.VERSION={{.Tag}}
     goos:
       - linux
       - windows
