--- a/assets/templates/docker-compose/environments/includes/php-fpm.base.yml
+++ b/assets/templates/docker-compose/environments/includes/php-fpm.base.yml
@@ -59,6 +59,12 @@ services:
       - XDEBUG_CONNECT_BACK_HOST=${XDEBUG_CONNECT_BACK_HOST:-''}
     labels:
       - traefik.enable=true
+{{- if .reward_traefik_allow_http }}
+      - traefik.http.routers.{{ .reward_env_name }}-php-fpm-http.priority=2
+      - traefik.http.routers.{{ .reward_env_name }}-php-fpm-http.rule=
+        HostRegexp(`{subdomain:.+}.{{ .traefik_domain }}`) || Host(`{{ .traefik_domain }}`)
+      - traefik.http.routers.{{ .reward_env_name }}-php-fpm-http.service={{ .reward_env_name }}-php-fpm
+{{- end }}
       - traefik.http.routers.{{ .reward_env_name }}-php-fpm.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-php-fpm.priority=2
       - traefik.http.routers.{{ .reward_env_name }}-php-fpm.rule=
