--- a/assets/templates/docker-compose/environments/includes/rabbitmq.base.yml
+++ b/assets/templates/docker-compose/environments/includes/rabbitmq.base.yml
@@ -7,6 +7,10 @@ services:
     image: {{ default "docker.io/rewardenv" .reward_docker_image_repo }}/rabbitmq:{{ default "3.8" .rabbitmq_version }}
     labels:
       - traefik.enable=true
+{{- if .reward_traefik_allow_http }}
+      - traefik.http.routers.{{ .reward_env_name }}-rabbitmq-http.rule=Host(`rabbitmq.{{ .traefik_domain }}`)
+      - traefik.http.routers.{{ .reward_env_name }}-rabbitmq-http.service={{ .reward_env_name }}-rabbitmq
+{{- end }}
       - traefik.http.routers.{{ .reward_env_name }}-rabbitmq.tls=true
       - traefik.http.routers.{{ .reward_env_name }}-rabbitmq.rule=Host(`rabbitmq.{{ .traefik_domain }}`)
       - traefik.http.services.{{ .reward_env_name }}-rabbitmq.loadbalancer.server.port=15672
