--- a/images/php-fpm/context/xdebug2/rootfs/etc/php/cli/conf.d/php-cli.ini.template
+++ b/images/php-fpm/context/xdebug2/rootfs/etc/php/cli/conf.d/php-cli.ini.template
@@ -3,4 +3,4 @@ memory_limit={{ getenv "PHP_CLI_MEMORY_LIMIT" "-1" }}
 
 [xdebug]
 xdebug.remote_autostart=on
-xdebug.remote_host={{ getenv "XDEBUG_REMOTE_HOST" "127.0.0.1" }}
+xdebug.remote_host={{ getenv "XDEBUG_REMOTE_HOST" "host.docker.internal" }}
