--- a/images/php-fpm/context/xdebug3/rootfs/etc/php/cli/conf.d/php-cli.ini.template
+++ b/images/php-fpm/context/xdebug3/rootfs/etc/php/cli/conf.d/php-cli.ini.template
@@ -4,4 +4,4 @@ memory_limit={{ getenv "PHP_CLI_MEMORY_LIMIT" "-1" }}
 [xdebug]
 xdebug.mode=debug
 xdebug.start_with_request=yes
-xdebug.client_host={{ getenv "XDEBUG_REMOTE_HOST" "127.0.0.1" }}
+xdebug.client_host={{ getenv "XDEBUG_REMOTE_HOST" "host.docker.internal" }}
